# TaskScheduler

./: .gitignore  CMakeLists.txt  Classification.cpp  Classification.h  Classification_Tests.h  Description.cpp  Description.h  Description_Tests.h  DueDate.cpp  DueDate.h  DueDateTests.h  DurationTests.h  Information.hpp  Number.cpp  Number.h  Priority.cpp  Priority.h  Priority_Tests.h  README.md  Task.h  Title.cpp  Title.h  TitleTests.h  UID.cpp  UID.h  UIDTests.h  cmake_install.cmake  data.csv  data.json  data.txt  descriptionTest.h  due_date.cpp  due_date.h  duration.cpp  duration.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  scheduler.pro  (+2 more)
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: Classification.cpp.F3B8AE9158B89716.idx  Classification.h.EAF396C0B37F6058.idx  Description.cpp.E6C7F9BC27E07E7D.idx  Description.h.8FC1CCA6E92B86B5.idx  DueDate.cpp.1F738BD175FBEA7A.idx  DueDate.h.12391664CB2F0CC7.idx  Duration.cpp.E81BE5D191BE798B.idx  Duration.h.1D9591A96F3F908A.idx  Information.hpp.756EC59C14D17A34.idx  Priority.cpp.3D42105EB9FF94C2.idx  (+208 more)
Headers/: Classification.h  Description.h  DueDate.h  Duration.h  Priority.h  Reader.h  Task.h  TaskList.h  Title.h  UID.h  User.h  UserClass.h
Sources/: Classification.cpp  Description.cpp  DueDate.cpp  Duration.cpp  Priority.cpp  Reader.cpp  TaskList.cpp  Title.cpp  UID.cpp
Tests/: Classification_Tests.h  Description_Tests.h  DueDateTests.h  DurationTests.h  Priority_Tests.h  TaskList_Tests.h  Task_Tests.h  TitleTests.h  UIDTests.h  UserTests.h  mock_qt_classification_tests.h  mock_qt_date_tests.h  mock_qt_duration_tests.h  mock_qt_priority_tests.h  mock_qt_qlist_tests.h  unit_test.cpp
